Trivy configuration changes

--- a/.github/workflows/eks-build-and-deploy-notifications-service.yml
+++ b/.github/workflows/eks-build-and-deploy-notifications-service.yml
@@ -83,7 +83,7 @@ jobs:
           image-ref: ${{ env.NOTIFICATIONS_SERVICE_ECR_REPOSITORY }}:latest
           format: 'table'
           exit-code: '1'
-          ignore-unfixed: false
+          ignore-unfixed: true
           vuln-type: 'os,library'
           severity: 'CRITICAL,HIGH'
 
