Trivy Configuration changes

--- a/.github/workflows/eks-build-and-deploy-notifications-service.yml
+++ b/.github/workflows/eks-build-and-deploy-notifications-service.yml
@@ -82,8 +82,8 @@ jobs:
         with:
           image-ref: ${{ env.NOTIFICATIONS_SERVICE_ECR_REPOSITORY }}:latest
           format: 'table'
-          exit-code: '1'
-          ignore-unfixed: true
+#          exit-code: '1'
+#         ignore-unfixed: true
           vuln-type: 'os,library'
           severity: 'CRITICAL,HIGH'
 
