--- a/.github/workflows/eks-build-and-deploy-notifications-service.yml
+++ b/.github/workflows/eks-build-and-deploy-notifications-service.yml
@@ -42,6 +42,8 @@ jobs:
     permissions:
       id-token: write
       contents: read
+    outputs:
+      image_uri: ${{ steps.set-output.outputs.IMAGE_URI }}
     steps:
       - name: Download Artifacts - Notifications Service build jar file
         uses: actions/download-artifact@v4
@@ -73,7 +75,7 @@ jobs:
           cd build-notifications-service
           ls -lrt ./target
           docker build -t ${{ env.NOTIFICATIONS_SERVICE_ECR_REPOSITORY }} .
-          docker tag ${{ env.NOTIFICATIONS_SERVICE_ECR_REPOSITORY }}:latest ${{ steps.login-ecr.outputs.registry }}/${{ env.NOTIFICATIONS_SERVICE_ECR_REPOSITORY }}:latest
+          docker tag ${{ env.NOTIFICATIONS_SERVICE_ECR_REPOSITORY }}:latest ${{ steps.login-ecr.outputs.registry }}/${{ env.NOTIFICATIONS_SERVICE_ECR_REPOSITORY }}:${{ env.VERSION }}
           echo "Docker Image Tagging completed. Below are list of docker Images" 
           docker images
 
@@ -93,6 +95,14 @@ jobs:
           docker push ${{ steps.login-ecr.outputs.registry }}/${{ env.NOTIFICATIONS_SERVICE_ECR_REPOSITORY }}:${{ env.VERSION }}
           echo "Docker Image Push completed"
 
+      - name : Set IMAGE_URI output varilable
+        id: set-output
+        run: |
+          IMAGE_URI=${{ steps.login-ecr.outputs.registry }}/${{ env.NOTIFICATIONS_SERVICE_ECR_REPOSITORY }}:${{ env.VERSION }}
+          echo "::add-mask::$IMAGE_URI"
+          IMAGE_URI_ENCRYPTED=$(gpg --symmetric --batch --passphrase "$SECRET" --output - <(echo "$IMAGE_URI") | base64 -w0)
+          echo "IMAGE_URI=$IMAGE_URI_ENCRYPTED" >> $GITHUB_OUTPUT
+
   deploy-notifications-service:
     name: Deploy Notifications Service to EKS
     runs-on: ubuntu-latest
@@ -105,6 +115,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      #  Accept IMAGE_URI from previous job
+      - name: Set IMAGE_URI from previous job
+        run: |
+          IMAGE_URI_DECRYPTED=$(gpg --decrypt --quiet --batch --passphrase "$SECRET" --output - <(echo "${{ needs.build-and-push-docker-image-to-ecr-notifications-service.outputs.image_uri }}" | base64 --decode))
+          
+          echo "IMAGE_URI=$IMAGE_URI_DECRYPTED" >> $GITHUB_ENV
+
+      # Replace deployment image name in deployment.yaml
+      - name: Replace deployment image name in deployment.yaml
+        run: |
+          cd Deploying_Microservices/Kubernetes/Notifications-Service
+          # Replace the image name in deployment.yaml with the ECR image URI
+          sed -i "s|image: notifications-service:latest|image: ${{ env.IMAGE_URI }}|g" deployment.yaml
+
       # Configure AWS credentials using OIDC (Recommended for security)
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -112,18 +136,6 @@ jobs:
           role-to-assume: ${{ env.AWS_ROLE_ARN }}
           audience: sts.amazonaws.com
           aws-region: ${{ env.AWS_REGION }}
-
-      # Login to Amazon ECR
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v2
-
-      # Replace deployment image name in deployment.yaml
-      - name: Replace deployment image name in deployment.yaml
-        run: |
-          cd Deploying_Microservices/Kubernetes/Notifications-Service
-          # Replace the image name in deployment.yaml with the ECR image URI
-          sed -i "s|image: notifications-service:latest|image: ${{ steps.login-ecr.outputs.registry }}/${{ env.NOTIFICATIONS_SERVICE_ECR_REPOSITORY }}:${{ env.VERSION }}|g" deployment.yaml
 
       # Deploy to EKS using kubectl
       - name: Deploy Notifications Service to EKS
